Closed
Bug 519348
Opened 16 years ago
Closed 16 years ago
Blocklist radhslib.dll, an unsupported add-on
Categories
(Toolkit :: Blocklist Policy Requests, defect, P2)
Tracking
()
RESOLVED
FIXED
People
(Reporter: cbook, Assigned: johnath)
References
(Depends on 1 open bug)
Details
(Keywords: crash, topcrash, verified1.9.2)
Attachments
(1 file)
|
927 bytes,
patch
|
vlad
:
review+
beltzner
:
approval1.9.2.2+
|
Details | Diff | Splinter Review |
From the Topcrash Stats:
http://crash-stats.mozilla.com/report/list?product=Firefox&version=Firefox%3A3.5.3&platform=windows&query_search=signature&query_type=exact&query=&date=&range_value=1&range_unit=weeks&do_query=1&signature=radhslib.dll%400x3b6f
radhslib.dll is a part of the Naomi web filter by Radiant Morning Technologies, according to some forums. Will test there.
Flags: blocking-firefox3.6?
Comment 1•16 years ago
|
||
Blocking 3.6+ per CrashKill effort.
Flags: blocking-firefox3.6? → blocking-firefox3.6+
Comment 2•16 years ago
|
||
Marking all topcrash bugs as P2 (3.6 release blockers, but not 3.6b1 blockers)
Updated•16 years ago
|
Priority: -- → P2
| Reporter | ||
Comment 4•16 years ago
|
||
while running this webfilter, the vm got very slow (also its an since 2006 or so unsupported product anymore), but still no crash so far
Comment 5•16 years ago
|
||
If this product is no longer under development and there's clearly not a way for us to get the developers to fix it, we should blocklist the dll. All present at the CrashKill meetings agree.
-> addons.mozilla.org::Blocklisting
Assignee: cbook → nobody
Component: General → Blocklisting
Product: Firefox → addons.mozilla.org
QA Contact: general → blocklisting
Version: 3.5 Branch → unspecified
Updated•16 years ago
|
Summary: Crash [@radhslib.dll@0x3b6f] → Blocklist radhslib.dll, an unsupported add-on
Comment 6•16 years ago
|
||
Oh, the unsupported comment is based on http://www.radiance.m6.net/ via Tomcat.
Comment 7•16 years ago
|
||
morgamic: Can we get this on the list for the next Blocklist update? Maybe Friday or so? I'm not sure how regularly we do them.
Assignee: nobody → morgamic
Comment 8•16 years ago
|
||
IS this installed as addon or as LSP which can not be blocked ?
| Assignee | ||
Comment 10•16 years ago
|
||
Can this be blocked at the plugin level, or only as a DLL? Tomcat - you ran this in a VM, does that mean there is an associated plugin? Or does this just drop in the components directory?
Comment 11•16 years ago
|
||
Tomcat, can we get an answer to comment 10? We need to know if this can be blocked at the plugin level or not; if not, we need to patch the code to block it at the DLL level.
| Reporter | ||
Comment 12•16 years ago
|
||
(In reply to comment #10)
> Can this be blocked at the plugin level, or only as a DLL? Tomcat - you ran
> this in a VM, does that mean there is an associated plugin? Or does this just
> drop in the components directory?
Retested this and seems its DLL Level - DLL was in C:\Program Files\rnamfler
and no plugin listed in Firefox
| Assignee | ||
Comment 13•16 years ago
|
||
DLL blocklist candidate - taking.
The crash dumps I'm looking at all report no version for this DLL, so the patch uses the UNVERSIONED macro.
Assignee: morgamic → johnath
Attachment #422268 -
Flags: review?(vladimir)
Attachment #422268 -
Flags: review?(vladimir) → review+
| Assignee | ||
Comment 14•16 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/59ea568ba8a4
(with a terrible checkin comment that didn't include an r=vlad - sorry world.)
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Johnath: Do we want this on the 1.9.2 branch?
| Assignee | ||
Comment 16•16 years ago
|
||
(In reply to comment #15)
> Johnath: Do we want this on the 1.9.2 branch?
Unless the crashes have disappeared on their own, I generally think we should take any blocklist addition on branches. They don't introduce code risk, they mitigate topcrashes (by definition!), and nothing about the evaluation process we go through here is branch-specific.
Of course, first we need a way to ask for branch approval...
It's currently the #107 topcrasher
Comment on attachment 422268 [details] [diff] [review]
Blocklist unversioned instances of radhslib.dll
And Dan just installed the flag, so requesting approval
Attachment #422268 -
Flags: approval1.9.2.1?
blocking1.9.2: --- → ?
Updated•16 years ago
|
blocking1.9.2: ? → -
status1.9.2:
--- → wanted
Comment 19•16 years ago
|
||
Comment on attachment 422268 [details] [diff] [review]
Blocklist unversioned instances of radhslib.dll
a1922=beltzner
Attachment #422268 -
Flags: approval1.9.2.2? → approval1.9.2.2+
Checked in for 1.9.2.2
http://hg.mozilla.org/releases/mozilla-1.9.2/rev/a71ea96b30a8
Comment 22•16 years ago
|
||
Verified for 1.9.2 by looking at checked in source.
Keywords: verified1.9.2
Updated•10 years ago
|
Product: addons.mozilla.org → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•