Bug 519348 - Blocklist radhslib.dll